# EA_Physics-Informed_Learning_for_Reaction_Diffusion_Equations

./: README.md  SGD_GUIDE.py  generate_data.py  main.py  pyproject.toml  test_sgd.py
data/: allen_cahn_eps0.100_sx50_sy50.npz  allen_cahn_eps0.100_sx50_sy50.pt  logistic_mu0.100_sx50_sy50_coef2.667.npz  logistic_mu0.100_sx50_sy50_coef2.667.pt
notebooks/: comparison_energy_vs_residual.ipynb  visualization.ipynb
scripts/: generate_data.py  run_experiment.py
src/: data_loader.py  data_loader_test.py  equations.py  equations_test.py  experiment_config.py  losses.py  losses_test.py  metrics.py  metrics_test.py  models.py  models_test.py  operators.py  operators_test.py  sampling.py  sampling_test.py  solvers.py  solvers_test.py
src/tmp/: fake_dataset.pt
tests/: test_equations.py
