[project]
name = "ea-physics-informed-learning-for-reaction-diffusion-equations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dataclasses>=0.8",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pathlib>=1.0.1",
    "scipy>=1.17.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]
